--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "pallets/pdex-migration",
     "pallets/ocex",
     "pallets/rewards",
+    "pallets/thea-message-handler",
     "primitives/orderbook",
     "primitives/bls-primitives",
     "primitives/polkadex",
