--- a/clients/thea/Cargo.toml
+++ b/clients/thea/Cargo.toml
@@ -17,11 +17,14 @@ parking_lot = "0.12.1"
 serde = "1.0.152"
 serde_json = "1.0.94"
 tokio = "1.26.0"
+tokio-stream = {version="0.1.12", features = ["time"]}
 thea-primitives = { path = "../../primitives/thea" }
 bls-primitives = { path = "../../primitives/bls-primitives" }
 polkadex-primitives = { path = "../../primitives/polkadex" }
+subxt = "0.27.1"
 prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
 parity-scale-codec = { version = "3.2.2", features = ["derive"] }
+
 
 sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
 sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
