--- a/primitives/thea/Cargo.toml
+++ b/primitives/thea/Cargo.toml
@@ -12,7 +12,7 @@ sp-api  = { workspace = true, default-features = false }
 sp-application-crypto = {workspace = true, default-features = false}
 bls-primitives = {workspace= true, default-features = false}
 polkadex-primitives = {workspace = true, default-features = false}
-
+scale-value = {version ="0.6.0", default-features = false}
 
 [features]
 default = ["std"]
