--- a/misc/load-testing/Cargo.toml
+++ b/misc/load-testing/Cargo.toml
@@ -9,4 +9,7 @@ edition = "2021"
 tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
 jsonrpsee = { version = "0.16.2", features = ["ws-client"] }
 orderbook-primitives = { path = "../../primitives/orderbook" }
+polkadex-primitives = { path = "../../primitives/polkadex" }
 sp-core = {workspace = true}
+sp-keyring = {workspace = true}
+serde_json = "1.0.96"
