--- a/clients/orderbook/Cargo.toml
+++ b/clients/orderbook/Cargo.toml
@@ -14,6 +14,7 @@ thiserror = "1.0.39"
 chrono = "0.4.24"
 parking_lot = "0.12.1"
 serde = "1.0.152"
+serde_with = {version="2.3.2", features =["json"]}
 primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }
 serde_json = "1.0.94"
 # Database stuff
