--- a/pallets/rewards/rpc/Cargo.toml
+++ b/pallets/rewards/rpc/Cargo.toml
@@ -15,3 +15,4 @@ sp-api = { workspace = true }
 sp-runtime = { workspace = true }
 polkadex-primitives = { workspace = true }
 pallet-rewards-runtime-api = { path = "runtime-api" }
+serde_json = "1.0.96"
